<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <artifactId>CineTrack</artifactId>

  <dependencies>
    <dependency>
      <artifactId>junit</artifactId>
      <groupId>junit</groupId>
      <scope>test</scope>
      <version>4.13.2</version>
    </dependency>
    <dependency>
      <artifactId>junit-jupiter</artifactId>
      <groupId>org.junit.jupiter</groupId>
      <scope>compile</scope>
      <version>RELEASE</version>
    </dependency>
    <dependency>
      <artifactId>jqwik</artifactId>
      <groupId>net.jqwik</groupId>
      <scope>test</scope>
      <version>1.9.0</version>
    </dependency>
    <dependency>
      <artifactId>jackson-databind</artifactId>
      <groupId>com.fasterxml.jackson.core</groupId>
      <version>2.15.2</version>
    </dependency>
    <dependency>
      <artifactId>javafx-controls</artifactId>
      <groupId>org.openjfx</groupId>
      <version>21</version>
    </dependency>
    <dependency>
      <artifactId>javafx-fxml</artifactId>
      <groupId>org.openjfx</groupId>
      <version>21</version>
    </dependency>
    <dependency>
      <artifactId>javafx-web</artifactId>
      <groupId>org.openjfx</groupId>
      <version>21</version>
    </dependency>
    <dependency>
      <artifactId>javafx-swing</artifactId>
      <groupId>org.openjfx</groupId>
      <version>21</version>
    </dependency>
    <dependency>
      <artifactId>controlsfx</artifactId>
      <groupId>org.controlsfx</groupId>
      <version>11.2.1</version>
    </dependency>
    <dependency>
      <artifactId>formsfx-core</artifactId>
      <exclusions>
        <exclusion>
          <artifactId>*</artifactId>
          <groupId>org.openjfx</groupId>
        </exclusion>
      </exclusions>
      <groupId>com.dlsc.formsfx</groupId>
      <version>11.6.0</version>
    </dependency>
    <dependency>
      <artifactId>ikonli-javafx</artifactId>
      <groupId>org.kordamp.ikonli</groupId>
      <version>12.3.1</version>
    </dependency>
    <dependency>
      <artifactId>bootstrapfx-core</artifactId>
      <groupId>org.kordamp.bootstrapfx</groupId>
      <version>0.4.0</version>
    </dependency>
    <dependency>
      <artifactId>tilesfx</artifactId>
      <exclusions>
        <exclusion>
          <artifactId>*</artifactId>
          <groupId>org.openjfx</groupId>
        </exclusion>
      </exclusions>
      <groupId>eu.hansolo</groupId>
      <version>21.0.3</version>
    </dependency>
    <dependency>
      <groupId>org.hibernate.orm</groupId>
      <artifactId>hibernate-core</artifactId>
      <version>6.4.1.Final</version>
    </dependency>
    <dependency>
      <groupId>mysql</groupId>
      <artifactId>mysql-connector-java</artifactId>
      <version>8.0.33</version>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>5.5.0</version>
      <scope>test</scope>
    </dependency>


  </dependencies>
  <groupId>org.com</groupId>
  <modelVersion>4.0.0</modelVersion>
  <build>
    <plugins>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>3.0.0</version>
        <configuration>
          <mainClass>org.com.CineTrackApplication</mainClass>
          <arguments>
            <argument>--add-opens</argument>
            <argument>java.base/java.lang=ALL-UNNAMED</argument>
          </arguments>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <properties>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  <version>1.0-SNAPSHOT</version>

</project>